--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <title>You're Still Here.</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" type="image/png" href="https://waryhub.com/files/preview/960x960/11750835141jhytyrqdqlvc3kdwgzcxdfkvkmwsrnirdfosxilwsxf7im1vhuziiqgw9kc9us7ts7od51h2rr7fs5hwwpmypmre2ewzrpzjregi.png">
+<link rel="icon" type="image/png" href="https://raw.githubusercontent.com/GalazySide/You-are-still-here./main/SPOILER_dqcQKkA.png">
 <style>
   *, *::before, *::after { margin:0; padding:0; box-sizing:border-box; }
   html, body {
@@ -624,6 +624,7 @@ updateTextFollow();
 </script>
 </body>
 </html>
+
 
 
 
